# noor_assistant

./: .gitignore  PROJECT_PROGRESS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_app.bat  run_noor_silent.vbs  setup_noor.bat
config/: app_settings.json  employee_reports.json  projects.json  tools.json  whatsapp_reply_rules.json  whatsapp_web_selectors.json
docs/: inspection.md  security.md
scripts/: edge_speak.py  find_phone_play_sound.ps1  list_voices.ps1  listen_once.ps1  speak.ps1  teams_send_ui.ps1  whatsapp_web_bridge.py  whatsapp_webjs_bridge.js
src/standalone_assistant/: app.py
src/standalone_assistant/core/: ai_response.py  assistant_brain.py  codex_cli.py  connections.py  connectors.py  employee_reports.py  find_phone.py  gemini_cli.py  google_productivity.py  paths.py  process_utils.py  project_scanner.py  single_instance.py  speech.py  storage.py  teams_alerts.py  time_parser.py  usage_limits.py  web_research.py  whatsapp_rules.py  whatsapp_web.py
src/standalone_assistant/ui/: main_window.py
templates/reports/: employee_monthly_report.html  employee_report.css  employee_weekly_report.html
